# horbits

./: .gitignore  LICENSE.md  README.md  horbits.cabal  init.bat
src/: Main.hs
src/Horbits/: Body.hs  DimLin.hs  KerbalDateTime.hs  Orbit.hs  Quantities.hs  SolarSystem.hs  Types.hs
src/Horbits/Orbit/: Geometry.hs
src/Horbits/UI/: BodyDetails.hs  ShowDim.hs
src/Horbits/UI/GL/: GLIso.hs  GLOrbit.hs
src/cc/: Main.hs
src/cc/HorbitsCC/: CameraControlExploration.hs
src/horbits/: Main.hs
src/horbits/Horbits/: Body.hs  DimLin.hs  KerbalDateTime.hs  Main.hs  Orbit.hs  SolarSystem.hs  Time.hs  Types.hs
src/horbits/Horbits/Body/: Atmosphere.hs  Body.hs  Color.hs  Data.hs  Id.hs
src/horbits/Horbits/Data/: Binding.hs  StateVar.hs
src/horbits/Horbits/Data/Variable/: Mapped.hs  State.hs
src/horbits/Horbits/Dimensional/: Internal.hs  Prelude.hs
src/horbits/Horbits/Graphics/Rendering/OpenGL/: PointSpriteARB.hs
src/horbits/Horbits/OpenGL/: PointSpriteARB.hs
src/horbits/Horbits/Orbit/: Anomaly.hs  Class.hs  Data.hs  Geometry.hs  Position.hs  Properties.hs  Velocity.hs
src/horbits/Horbits/Time/: KerbalClock.hs  KerbalDateTime.hs
src/horbits/Horbits/UI/: BodyDetails.hs  BodyList.hs  Camera.hs  Model.hs  ShowDim.hs  TimeControl.hs  UIMain.hs  VisibilityToggle.hs
src/horbits/Horbits/UI/Camera/: Control.hs  Internal.hs  Trace.hs  Zoom.hs
src/horbits/Horbits/UI/GL/: GLBody.hs  GLCamera.hs  GLIso.hs  GLOrbit.hs  GLSetup.hs  GLTextures.hs
src/horbits/Horbits/UI/Time/: TimeModel.hs
src/sprite/: Main.hs
src/sprite/HorbitsSPR/: SpritePointExploration.hs
testsuite/: HorbitsTests.hs
testsuite/Horbits/: KerbalDateTimeTest.hs  OrbitClassicalTest.hs  OrbitEq.hs  OrbitGen.hs  OrbitSample.hs  OrbitTest.hs  Rematch.hs
testsuite/Horbits/UI/: CameraTest.hs  ShowDimTest.hs
