name:           horbits
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Chewie

executable horbits
  build-depends:   
                   base >= 4.7,
                   transformers >= 0.4.3.0,
                   lens >= 4.8,
                   containers >= 0.5.6.3,
                   semigroups >= 0.16.2.2,
                   linear >= 1.18.0.1,
                   numtype-tf >= 0.1.2,
                   dimensional-tf >= 0.3.0.1,
                   th-printf >= 0.3.0.0,
                   OpenGL >= 2.12.0,
                   OpenGLRaw >= 2.4.1.0,
                   gtk >= 0.12.5.7,
                   gtkglext >= 0.12.5.0,
                   binding-core >= 0.2.2,
                   binding-gtk >= 0.2.1
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  src/horbits
  main-is:         Main.hs
  other-modules:   
                   Horbits.Body,
                   Horbits.DimLin,
                   Horbits.KerbalDateTime,
                   Horbits.Main,
                   Horbits.Orbit,
                   Horbits.SolarSystem,
                   Horbits.Types,
                   Horbits.Orbit.Geometry,
                   Horbits.UI.BodyDetails,
                   Horbits.UI.BodyList,
                   Horbits.UI.Camera,
                   Horbits.UI.ShowDim,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLIso,
                   Horbits.UI.GL.GLOrbit,
                   Horbits.UI.GL.GLSetup


test-suite HorbitsTests
  build-depends:   
                   base >= 4.7,
                   HTF >= 0.12.2.4,
                   mtl >= 2.2.1,
                   QuickCheck >= 2.8,
                   random >= 1.1,
                   rematch >= 0.2.0.0
  ghc-options:     -Wall -rtsopts -fhpc -hpcdir dist/hpc/horbits-0.1
  hs-source-dirs:  
                   src/horbits,
                   testsuite
  main-is:         HorbitsTests.hs
  other-modules:   
                   Horbits.Body,
                   Horbits.DimLin,
                   Horbits.KerbalDateTime,
                   Horbits.Main,
                   Horbits.Orbit,
                   Horbits.SolarSystem,
                   Horbits.Types,
                   Horbits.Orbit.Geometry,
                   Horbits.UI.BodyDetails,
                   Horbits.UI.BodyList,
                   Horbits.UI.Camera,
                   Horbits.UI.ShowDim,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLIso,
                   Horbits.UI.GL.GLOrbit,
                   Horbits.UI.GL.GLSetup,
                   Horbits.KerbalDateTimeTest,
                   Horbits.OrbitClassicalTest,
                   Horbits.OrbitEq,
                   Horbits.OrbitGen,
                   Horbits.OrbitSample,
                   Horbits.Rematch,
                   Horbits.UI.ShowDimTest
  type:            exitcode-stdio-1.0
