name:           horbits
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Chewie
data-files:
                data/body.png

executable horbits
  build-depends:   
                   base >= 4.7,
                   template-haskell >= 2.9.0.0,
                   transformers >= 0.4.3.0,
                   mtl >= 2.2.1,
                   lens >= 4.8,
                   containers >= 0.5.6.3,
                   semigroups >= 0.16.2.2,
                   linear >= 1.18.0.1,
                   numtype-tf >= 0.1.2,
                   dimensional-tf >= 0.3.0.1,
                   th-printf >= 0.3.0.0,
                   clock >= 0.4.1.3,
                   OpenGL >= 2.12.0,
                   OpenGLRaw >= 2.4.1.0,
                   JuicyPixels >= 3.2.3.1,
                   GLUtil >= 0.8.6,
                   gtk >= 0.12.5.7,
                   gtkglext >= 0.12.5.0,
                   StateVar >= 1.1.0.0
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  src/horbits
  main-is:         Main.hs
  other-modules:   
                   Horbits.Body,
                   Horbits.Body.Atmosphere,
                   Horbits.Body.Body,
                   Horbits.Body.Color,
                   Horbits.Body.Data,
                   Horbits.Body.Id,
                   Horbits.Data.Binding,
                   Horbits.Data.StateVar,
                   Horbits.Dimensional.Internal,
                   Horbits.Dimensional.Prelude,
                   Horbits.KerbalDateTime,
                   Horbits.Main,
                   Horbits.OpenGL.PointSpriteARB,
                   Horbits.Orbit,
                   Horbits.Orbit.Anomaly,
                   Horbits.Orbit.Class,
                   Horbits.Orbit.Data,
                   Horbits.Orbit.Geometry,
                   Horbits.Orbit.Position,
                   Horbits.Orbit.Properties,
                   Horbits.Orbit.Velocity,
                   Horbits.SolarSystem,
                   Horbits.Types,
                   Horbits.UI.BodyDetails,
                   Horbits.UI.BodyList,
                   Horbits.UI.Camera,
                   Horbits.UI.Camera.Control,
                   Horbits.UI.Camera.Internal,
                   Horbits.UI.Camera.Zoom,
                   Horbits.UI.GL.GLBody,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLIso,
                   Horbits.UI.GL.GLOrbit,
                   Horbits.UI.GL.GLSetup,
                   Horbits.UI.GL.GLTextures,
                   Horbits.UI.Model,
                   Horbits.UI.ShowDim,
                   Horbits.UI.Time.TimeModel,
                   Horbits.UI.UIMain,
                   Horbits.UI.VisibilityToggle,
                   Paths_horbits
  extensions:      
                   FlexibleContexts, 
                   MultiParamTypeClasses

executable cc
  build-depends:   
                   base >= 4.7,
                   transformers >= 0.4.3.0,
                   lens >= 4.8,
                   containers >= 0.5.6.3,
                   semigroups >= 0.16.2.2,
                   linear >= 1.18.0.1,
                   th-printf >= 0.3.0.0,
                   OpenGL >= 2.12.0,
                   OpenGLRaw >= 2.4.1.0,
                   gtk >= 0.12.5.7,
                   gtkglext >= 0.12.5.0
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  
                   src/cc,
                   src/horbits
  main-is:         Main.hs
  other-modules:   
                   Horbits.Data.Binding,
                   Horbits.Data.StateVar,
                   Horbits.UI.Camera,
                   Horbits.UI.Camera.Control,
                   Horbits.UI.Camera.Internal,
                   Horbits.UI.Camera.Zoom,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLSetup

test-suite HorbitsTests
  build-depends:   
                   base >= 4.7,
                   HTF >= 0.12.2.4,
                   QuickCheck >= 2.8,
                   random >= 1.1,
                   rematch >= 0.2.0.0
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  
                   src/horbits,
                   testsuite
  main-is:         HorbitsTests.hs
  other-modules:   
                   Horbits.Body,
                   Horbits.Body.Atmosphere,
                   Horbits.Body.Body,
                   Horbits.Body.Color,
                   Horbits.Body.Data,
                   Horbits.Body.Id,
                   Horbits.Data.StateVar,
                   Horbits.Dimensional.Internal,
                   Horbits.Dimensional.Prelude,
                   Horbits.KerbalDateTime,
                   Horbits.KerbalDateTimeTest,
                   Horbits.Main,
                   Horbits.OpenGL.PointSpriteARB,
                   Horbits.Orbit,
                   Horbits.Orbit.Anomaly,
                   Horbits.Orbit.Class,
                   Horbits.Orbit.Data,
                   Horbits.Orbit.Geometry,
                   Horbits.Orbit.Position,
                   Horbits.Orbit.Properties,
                   Horbits.Orbit.Velocity,
                   Horbits.OrbitClassicalTest,
                   Horbits.OrbitEq,
                   Horbits.OrbitGen,
                   Horbits.OrbitSample,
                   Horbits.Rematch,
                   Horbits.SolarSystem,
                   Horbits.Types,
                   Horbits.UI.BodyDetails,
                   Horbits.UI.BodyList,
                   Horbits.UI.Camera,
                   Horbits.UI.Camera.Control,
                   Horbits.UI.Camera.Internal,
                   Horbits.UI.Camera.Zoom,
                   Horbits.UI.CameraTest,
                   Horbits.UI.GL.GLBody,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLIso,
                   Horbits.UI.GL.GLOrbit,
                   Horbits.UI.GL.GLSetup,
                   Horbits.UI.GL.GLTextures,
                   Horbits.UI.ShowDim,
                   Horbits.UI.ShowDimTest,
                   Horbits.UI.Time.TimeModel,
                   Horbits.UI.UIMain,
                   Horbits.UI.VisibilityToggle
  type:            exitcode-stdio-1.0

executable sprite
  build-depends:   base >= 4.7,
                   transformers >= 0.4.3.0,
                   lens >= 4.8,
                   containers >= 0.5.6.3,
                   semigroups >= 0.16.2.2,
                   linear >= 1.18.0.1,
                   OpenGL >= 2.12.0,
                   OpenGLRaw >= 2.4.1.0,
                   gtk >= 0.12.5.7,
                   gtkglext >= 0.12.5.0,
                   JuicyPixels >= 3.2.3.1,
                   GLUtil >= 0.8.6,
                   vector >= 0.10.12.3
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  
                   src/sprite,
                   src/horbits 
  main-is:         Main.hs
  other-modules:   
                   Horbits.Data.Binding,
                   Horbits.Data.StateVar,
                   Horbits.OpenGL.PointSpriteARB,
                   Horbits.UI.Camera,
                   Horbits.UI.Camera.Control,
                   Horbits.UI.Camera.Internal,
                   Horbits.UI.Camera.Zoom,
                   Horbits.UI.GL.GLCamera,
                   Horbits.UI.GL.GLIso,
                   Horbits.UI.GL.GLSetup,
                   Horbits.UI.GL.GLTextures,
                   HorbitsSPR.SpritePointExploration,
                   Paths_horbits

